- AppView massive advances - Overwritten toString() of Client, Message - Comments