@@ -6,16 +6,16 @@ import client.data.Client;
 import client.data.Message;
 
 public class Controller {
-    public Client client;
+    private Client client;
     public TestView tView;
 
     public Controller(Client client){
-        this.client = client;
-        client.con = this;
+        this.setClient(client);
+        client.setController(this);
     }
 
     public void sendMessage(TextArea textArea, TextField usernameField) {
-        if(!(textArea.getText().isBlank() || !usernameField.getText().isBlank())) {
+        if(!(textArea.getText().trim().isEmpty() || usernameField.getText().trim().isEmpty())) {
             System.out.println("Sending message \"" + textArea.getText() + "\" to " + usernameField.getText());
             getClient().sendMessageToServer(new Message(getClient().getName(), usernameField.getText(), textArea.getText()));
         }
@@ -32,7 +32,7 @@ public class Controller {
         return client;
     }
 
-    public void setClient(Client client) {
+    private void setClient(Client client) {
         this.client = client;
     }
 }
